[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=3]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Naves/Player/impacto_player.ogg" type="AudioStream" id=8]

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )

[node name="Canion" parent="." instance=ExtResource( 4 )]
position = Vector2( -1, 0 )

[node name="SFXImpactoDanio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
